@@ -1,7 +1,7 @@
 package com.l06g06.shellshift.controller.menus;
 
+import com.l06g06.shellshift.Database;
 import com.l06g06.shellshift.Game;
-import com.l06g06.shellshift.controller.menus.MainMenuController;
 import com.l06g06.shellshift.gui.Gui;
 import com.l06g06.shellshift.model.mainmenu.MainMenu;
 import com.l06g06.shellshift.states.*;
@@ -10,7 +10,6 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.fail;
@@ -23,6 +22,7 @@ public class MainMenuControllerTest {
 
     @BeforeEach
     public void setUp() {
+        Database.getInstance().setSound(true);
         mainMenu = mock(MainMenu.class);
         mainMenuController = new MainMenuController(mainMenu);
         game = mock(Game.class);
@@ -30,7 +30,7 @@ public class MainMenuControllerTest {
 
     @Test
     public void stepSelectTest() throws IOException {
-        List<Gui.PressedKey> actions = Arrays.asList(Gui.PressedKey.SELECT);
+        List<Gui.PressedKey> actions = List.of(Gui.PressedKey.SELECT);
         mainMenuController.step(game, actions, 100);
         verify(mainMenu, times(1)).isSelectedStart();
         verify(mainMenu, times(1)).isSelectedShop();
@@ -42,7 +42,7 @@ public class MainMenuControllerTest {
 
     @Test
     public void stepUpTest() throws IOException {
-        List<Gui.PressedKey> actions = Arrays.asList(Gui.PressedKey.UP);
+        List<Gui.PressedKey> actions = List.of(Gui.PressedKey.UP);
         mainMenuController.step(game, actions, 100);
         verify(mainMenu, times(1)).prevOption();
         verify(mainMenu, times(0)).nextOption();
@@ -50,7 +50,7 @@ public class MainMenuControllerTest {
 
     @Test
     public void stepDownTest() throws IOException {
-        List<Gui.PressedKey> actions = Arrays.asList(Gui.PressedKey.DOWN);
+        List<Gui.PressedKey> actions = List.of(Gui.PressedKey.DOWN);
         mainMenuController.step(game, actions, 100);
         verify(mainMenu, times(1)).nextOption();
         verify(mainMenu, times(0)).prevOption();
